--- a/dashboard.html
+++ b/dashboard.html
@@ -18,8 +18,8 @@
                     <li><a href="#">راهنمای بازی</a></li>
                     <li><a href="#">تخته نرد</a></li>
                     <li><a href="#">پاسور</a></li>
-                    <li><a href="../GAME/CRASH.html">انفجار</a></li>
-                    <li><a href="../GAME/PLINKO.html">پلینکو </a></li>
+                    <li><a href="GAME/CRASH.html">انفجار</a></li>
+                    <li><a href="GAME/PLINKO.html">پلینکو </a></li>
 
                 </ul>
             </nav>
