--- a/GAME/CRASH.html
+++ b/GAME/CRASH.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>داشبورد کاربر</title>
-    <link rel="stylesheet" href="../ASSETS/CSS/style.css">
+    <link rel="stylesheet" href="../ASSETS/CSS/CRASH.css">
 </head>
 <body>
     <div class="dashboard-container">
@@ -103,6 +103,6 @@
     <audio id="explosion-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-bomb-explosion-1680.mp3"></audio>
     <audio id="click-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-modern-click-box-check-1120.mp3"></audio>
 
-    <script src="../ASSETS/JS/script.js"></script>
+    <script src="../ASSETS/JS/CRASH.js"></script>
 </body>
 </html>
