--- a/GAME/PLINKO.html
+++ b/GAME/PLINKO.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پلینکو حرفه‌ای | Plinko Pro</title>
-    <link rel="stylesheet" href="../ASSETS/CSS/style.css">
+    <link rel="stylesheet" href="../ASSETS/CSS/PLINKO.css">
 </head>
 <body>
         <!-- هدر -->
@@ -12,13 +12,13 @@
             <div class="logo">داشبورد</div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#" class="active">داشبورد</a></li>
+                    <li><a href="../DASHBOARD.html" class="active">داشبورد</a></li>
                     <li><a href="#">پشتیبان</a></li>
-                    <li><a href="#">راهنمای بازی</a></li>
-                    <li><a href="#">تخته نرد</a></li>
-                    <li><a href="#">پاسور</a></li>
-                    <li><a href="../GAME/CRASH.html">انفجار</a></li>
-                    <li><a href="../GAME/PLINKO.html">پلینکو </a></li>
+                    <li><a href="COINFLIP.html">شیر خط</a></li>
+                    <li><a href="MINES.html">الماس</a></li>
+                    <li><a href="TOWER.html">همسان</a></li>
+                    <li><a href="CRASH.html">انفجار</a></li>
+                    <li><a href="PLINKO.html">پلینکو </a></li>
 
                 </ul>
             </nav>
@@ -81,6 +81,6 @@
     <audio id="win-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3" preload="auto"></audio>
     <audio id="lose-sound" src="https://assets.mixkit.co/sfx/preview/mixkit-negative-answer-wah-wah-737.mp3" preload="auto"></audio>
 
-    <script src="../ASSETS/JS/script.js"></script>
+    <script src="../ASSETS/JS/PLINKO.js"></script>
 </body>
 </html>
