--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>داشبورد کاربر</title>
-    <link rel="stylesheet" href="ASSETS/CSS/style.css">
+    <link rel="stylesheet" href="ASSETS/CSS/DASHBOARD.css">
 </head>
 <body>
     <div class="dashboard-container">
@@ -13,11 +13,11 @@
             <div class="logo">داشبورد</div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#" class="active">داشبورد</a></li>
+                    <li><a href="DASHBOARD.html" class="active">داشبورد</a></li>
                     <li><a href="#">پشتیبان</a></li>
-                    <li><a href="#">راهنمای بازی</a></li>
-                    <li><a href="#">تخته نرد</a></li>
-                    <li><a href="#">پاسور</a></li>
+                    <li><a href="GAME/COINFLIP.html">شیر خط</a></li>
+                    <li><a href="GAME/MINES.html">الماس</a></li>
+                    <li><a href="GAME/TOWER.html">همسان</a></li>
                     <li><a href="GAME/CRASH.html">انفجار</a></li>
                     <li><a href="GAME/PLINKO.html">پلینکو </a></li>
 
@@ -155,6 +155,6 @@
         </footer>
     </div>
 
-    <script src="../ASSETS/JS/script.js"></script>
+    <script src="../ASSETS/JS/DASHBOARD.js"></script>
 </body>
 </html>
