--- a/GAME/COINFLIP.html
+++ b/GAME/COINFLIP.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بازی سکه کلاسیک</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../ASSETS/CSS/COINFLIP.css">
 </head>
 <body>
+    <div class="dashboard-container">
+        <!-- هدر دقیقاً مطابق خواسته شما -->
+        <header class="dashboard-header">
+            <div class="logo">داشبورد</div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="../DASHBOARD.html" class="active">داشبورد</a></li>
+                    <li><a href="#">پشتیبان</a></li>
+                    <li><a href="COINFLIP.html">شیر خط</a></li>
+                    <li><a href="MINES.html">الماس</a></li>
+                    <li><a href="TOWER.html">همسان</a></li>
+                    <li><a href="CRASH.html">انفجار</a></li>
+                    <li><a href="PLINKO.html">پلینکو</a></li>
+                </ul>
+            </nav>
+            <div class="user-account">
+                <span class="username">کاربر مهمان</span>
+                <div class="avatar">👤</div>
+            </div>
+        </header>
+        
+        <!-- محتوای اصلی (خالی) -->
+        <main></main>
+    </div>
     <div class="game-form">
         <form class="coin-app">
             <header>
@@ -56,6 +80,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../ASSETS/JS/COINFLIP.js"></script>
 </body>
 </html>
