--- a/GAME/MINES.html
+++ b/GAME/MINES.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بازی ماین</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../ASSETS/CSS/MINES.css">
 </head>
 <body>
+        <!-- هدر -->
+        <header class="dashboard-header">
+            <div class="logo">داشبورد</div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="../DASHBOARD.html" class="active">داشبورد</a></li>
+                    <li><a href="#">پشتیبان</a></li>
+                    <li><a href="COINFLIP.html">شیر خط</a></li>
+                    <li><a href="MINES.html">الماس</a></li>
+                    <li><a href="TOWER.html">همسان</a></li>
+                    <li><a href="CRASH.html">انفجار</a></li>
+                    <li><a href="PLINKO.html">پلینکو </a></li>
+
+                </ul>
+            </nav>
+            <div class="user-account">
+                <span class="username">کاربر مهمان</span>
+                <div class="avatar">👤</div>
+            </div>
+        </header>
+        
     <div class="mines-game">
         <header>
             <h1>بازی ماین 💎</h1>
@@ -54,6 +75,6 @@
         <div id="message" class="message"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../ASSETS/JS/MINES.js"></script>
 </body>
 </html>
