--- a/DASHBOARD/DASHBOARD.html
+++ b/DASHBOARD/DASHBOARD.html
@@ -15,11 +15,11 @@
                 <ul>
                     <li><a href="DASHBOARD.html" class="active">داشبورد</a></li>
                     <li><a href="#">پشتیبان</a></li>
-                    <li><a href="GAME/COINFLIP.html">شیر خط</a></li>
-                    <li><a href="GAME/MINES.html">الماس</a></li>
-                    <li><a href="GAME/TOWER.html">همسان</a></li>
-                    <li><a href="GAME/CRASH.html">انفجار</a></li>
-                    <li><a href="GAME/PLINKO.html">پلینکو </a></li>
+                    <li><a href="../GAME/COINFLIP.html">شیر خط</a></li>
+                    <li><a href="../GAME/MINES.html">الماس</a></li>
+                    <li><a href="../GAME/TOWER.html">همسان</a></li>
+                    <li><a href="../GAME/CRASH.html">انفجار</a></li>
+                    <li><a href="../GAME/PLINKO.html">پلینکو </a></li>
 
                 </ul>
             </nav>
