--- a/GAME/PLINKO.html
+++ b/GAME/PLINKO.html
@@ -7,27 +7,6 @@
     <link rel="stylesheet" href="../ASSETS/CSS/PLINKO.css">
 </head>
 <body>
-        <!-- هدر -->
-        <header class="dashboard-header">
-            <div class="logo">داشبورد</div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="../DASHBOARD.html" class="active">داشبورد</a></li>
-                    <li><a href="#">پشتیبان</a></li>
-                    <li><a href="COINFLIP.html">شیر خط</a></li>
-                    <li><a href="MINES.html">الماس</a></li>
-                    <li><a href="TOWER.html">همسان</a></li>
-                    <li><a href="CRASH.html">انفجار</a></li>
-                    <li><a href="PLINKO.html">پلینکو </a></li>
-
-                </ul>
-            </nav>
-            <div class="user-account">
-                <span class="username">کاربر مهمان</span>
-                <div class="avatar">👤</div>
-            </div>
-        </header>
-
     <div class="plinko-app">
         <header>
             <h1>🎯 PLINKO PRO</h1>
@@ -58,14 +37,12 @@
             <div class="game-container">
                 <div class="game-board" id="game-board"></div>
                 <div class="multipliers" id="multipliers">
-                    <div class="slot" data-multiplier="10">x10</div>
+                    <div class="slot" data-multiplier="10">x10</div>  <!-- سمت چپ -->
                     <div class="slot" data-multiplier="5">x5</div>
                     <div class="slot" data-multiplier="2">x2</div>
                     <div class="slot" data-multiplier="1">x1</div>
-                    <div class="slot" data-multiplier="0.2">x0.2</div>
                     <div class="slot" data-multiplier="0.5">x0.5</div>
-                    
-
+                    <div class="slot" data-multiplier="0.2">x0.2</div>  <!-- سمت راست -->
                 </div>
             </div>
 
