--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
             </div>
             
             <div class="auth-buttons">
-                <button href="AUTHENTICATION/LOGIN.html" class="auth-btn login-btn">ورود</button>
-                <button href="AUTHENTICATION/SIGUP.html" class="auth-btn register-btn">ثبت نام</button>
+                <a href="AUTHENTICATION/LOGIN.html" class="auth-btn login-btn">ورود</a>
+                <a href="AUTHENTICATION/SIGUP.html" class="auth-btn register-btn">ثبت نام</a>
             </div>
-            
+
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="DASHBOARD/DASHBOARD.html" class="active">داشبورد</a></li>
